--- a/index.html
+++ b/index.html
@@ -422,7 +422,7 @@
 	<section class="reviews">
 		<div class="container">
 			<h2 class="text-center">Отзывы</h2>
-			<img src="img/Vk.png" alt="" class="img-responsive">
+			<div id="feedback_vk"></div>
 		</div>
 
 
@@ -1019,7 +1019,8 @@
 		<script src="js/scripts.min.js"></script>
 		<script type="text/javascript" src="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"></script>
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-modal/0.9.1/jquery.modal.min.js"></script>
-		
+		<script src="https://feedback.kupiapp.ru/widget/widget.js" type="text/javascript"></script>
+<script type="text/javascript">document.addEventListener("DOMContentLoaded", feedback_vk.init({id:'feedback_vk', gid:170681153}));</script>
 		
 		
 
