--- a/index.html
+++ b/index.html
@@ -397,23 +397,23 @@
 				<div class="row text-center">
 					<div class="col min-w">
 						<span class="big-text">100%</span>
-						<p>наших учеников сдают экзамены на высокие баллы</p>
+						<p>наших учеников сдают <br>экзамены на высокие баллы</p>
 					</div>
 					<div class="col min-w">
 						<span class="big-text">3 года</span>
-						<p>Успешной работы по эффективной подготовке к ОГЭ и ЕГЭ</p>
+						<p>Успешной работы по<br> эффективной подготовке к<br> ОГЭ и ЕГЭ</p>
 					</div>
 					<div class="col min-w">
 						<span class="big-text">5</span>
-						<p>Дипломированных преподавателей-экспертовс профильным образованием</p>
+						<p>Дипломированных<br> преподавателей-экспертов с<br> профильным образованием</p>
 					</div>
 					<div class="col min-w">
 						<span class="big-text">87</span>
-						<p>Общее кол-во лет опыта нашего состава преподавателей</p>
+						<p>Общее кол-во лет опыта<br> нашего состава<br> преподавателей</p>
 					</div>
 					<div class="col min-w">
 						<span class="big-text">>500</span>
-						<p>Учеников прошли обучение с нами</p>
+						<p>Учеников прошли обучение с<br> нами</p>
 					</div>
 				</div>
 			</div>
