--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 <body>
 
 	<header>
-		<div class="arrow"></div>
+	<a class="jsscroll" href="#preparation"><div class="arrow"></div></a>	
 		<div class="container">
 			<div class="header-topLine  d-flex justify-content-between align-items-center">
 				<div class="logo">
@@ -56,7 +56,7 @@
 		</div>
 	</header>
 
-	<section class="preparation">
+	<section class="preparation" id="preparation">
 		<div class="container">
 			<h2 class="text-uppercase black-text text-center section-header">
 				Мы ГОТОВИМ ко ВСЕМ ПРЕДМЕТАМ ДЛЯ ОГЭ И ЕГЭ!
@@ -350,13 +350,13 @@
 				</h2>
 				<h4 class="text-uppercase text-center">Мы работаем 6 дней в неделю!</h4>
 				<div class="row">
-					<div class="col"><img src="img/day1.png" alt="" class="img-responsive"></div>
-					<div class="col"><img src="img/day2.png" alt="" class="img-responsive"></div>
-					<div class="col"><img src="img/day3.png" alt="" class="img-responsive"></div>
-					<div class="col"><img src="img/day4.png" alt="" class="img-responsive"></div>
-					<div class="col"><img src="img/day5.png" alt="" class="img-responsive"></div>
-					<div class="col"><img src="img/day6.png" alt="" class="img-responsive"></div>
-					<div class="col"><img src="img/day7.png" alt="" class="img-responsive"></div>
+					<div class="col"><img src="img/day1.svg" alt="" class="img-responsive"></div>
+					<div class="col"><img src="img/day2.svg" alt="" class="img-responsive"></div>
+					<div class="col"><img src="img/day3.svg" alt="" class="img-responsive"></div>
+					<div class="col"><img src="img/day4.svg" alt="" class="img-responsive"></div>
+					<div class="col"><img src="img/day5.svg" alt="" class="img-responsive"></div>
+					<div class="col"><img src="img/day6.svg" alt="" class="img-responsive"></div>
+					<div class="col"><img src="img/day7.svg" alt="" class="img-responsive"></div>
 				</div>
 				<div class="text-center">
 					<a href="#ex1" rel="modal:open"><button class="blue-submit" rel="modal:open">ЗАПИСАТЬСЯ</button></a>
@@ -941,8 +941,8 @@
 											<label for="styled-checkbox-89" class="calc">Базовая математика</label>
 										</li>
 										<li>
-											<input class="styled-checkbox" id="styled-checkbox-90" type="checkbox" value="EGE" name="Profilnaya Matematika">
-											<label for="styled-checkbox-90" class="student">Профильная математика</label>
+											<input class="styled-checkbox" id="styled-checkbox-1111" type="checkbox" value="EGE" name="Profilnaya Matematika">
+											<label for="styled-checkbox-1111" class="student">Профильная математика</label>
 										</li>
 										<li>
 											<input class="styled-checkbox" id="styled-checkbox-91" type="checkbox" value="EGE" name="Russkiy">
