--- a/index.html
+++ b/index.html
@@ -1019,7 +1019,17 @@
 				Свяжемся с вами в ближайшее время!</p>
 		</div>
 	</div>
-
+	<div class="tel fixed" id="tel">
+        <div class="tel__number">
+            <a class="white" href="tel:+739525773770"><span class="tel__tel white">	
+                8 (3952) 577 - 377	
+            </span></a>
+        </div>
+        <div class="tel__text white">ул. Партизанская 3, оф. 312</div>
+        <div class="d-hide">
+            <a href="tel:83952577377"><img src="img/phone-mobile.svg" alt=""></a>
+        </div>
+    </div>
 
 
 	<script src="js/scripts.min.js"></script>
