--- a/index.html
+++ b/index.html
@@ -49,9 +49,12 @@
 				</div>
 			</div>
 			<div class="header-info d-flex flex-column justify-content-center text-center ">
-				<h1 class="text-uppercase white-text">Школа эффективной <br> подготовки к ОГЭ и ЕГЭ</h1>
-				<p class="text-uppercase white-text">Готовим к ЕГЭ и ОГЭ на 85+ баллов в <br> мини группах и индивидуально</p>
-				<a href="#ex1" rel="modal:open"><button type="button">записаться</button></a>
+				<div class="info-wrapper">
+						<h1 class="text-uppercase white-text">Школа эффективной <br> подготовки к ОГЭ и ЕГЭ</h1>
+						<p class="text-uppercase white-text">Готовим к ЕГЭ и ОГЭ на 85+ баллов в <br> мини группах и индивидуально</p>
+						<a href="#ex1" rel="modal:open"><button type="button">записаться</button></a>
+				</div>
+				
 			</div>
 		</div>
 	</header>
