--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 
 
 	<link rel="stylesheet" href="css/main.min.css">
-
+ 
 </head>
 
 <body>
@@ -850,7 +850,7 @@
 		<div class="container">
 			<div class="row pos-relative h-100">
 				<div class="politics">
-					<a href="#" class="">Политика конфиденциальности</a>
+					<a href="/politics.html" class="">Политика конфиденциальности</a>
 				</div>
 				<div class="logo-footer">
 					<img src="img/footer-logo.png" alt="">
