--- a/index.html
+++ b/index.html
@@ -609,9 +609,9 @@
 					<span class="teacher-name">Балицкий Артур Владимирович</span>
 				</div>
 				<div class="teacher">
-					<img src="img/p1.png" alt="" class="img-responsive">
-					<span class="blue-text">Преподаватель Математики </span><br>
-					<span class="teacher-name">Тамара Висльевна</span>
+					<img src="img/phisic.jpg" alt="" class="img-responsive">
+					<span class="blue-text"> учитель физики и информатики </span><br>
+					<span class="teacher-name">Тенгайкин Сергей Александрович</span>
 				</div>
 			</div>
 		</div>
