--- a/index.html
+++ b/index.html
@@ -1028,7 +1028,7 @@
                 8 (3952) 577 - 377	
             </span></a>
         </div>
-        <div class="tel__text white">ул. Партизанская 3, оф. 312</div>
+        <div class="tel__text white">Иркутск, ул. Пискунова д. 44</div>
         <div class="d-hide">
             <a href="tel:83952577377"><img src="img/phone-mobile.svg" alt=""></a>
         </div>
