--- a/index.html
+++ b/index.html
@@ -66,19 +66,7 @@
 			</h2>
 		</div>
 
-		<!-- <div class="subjects">
-			<div class="container-fluid no-right-padding">
-				<div class="row slick">
-					<div class="col"><img src="img/mathematick.png" alt="Математика" class="img-responsive"><span class="text-uppercase white-text d-block text-center">Математика</span></div>
-					<div class="col"><img src="img/phisics.png" alt="физика" class="img-responsive"><span class="text-uppercase white-text d-block text-center">физика</span></div>
-					<div class="col"><img src="img/russian.png" alt="русский язык" class="img-responsive"><span class="text-uppercase white-text d-block text-center">русский
-							язык</span></div>
-					<div class="col"><img src="img/sociology.png " alt="обществознание" class="img-responsive"><span class="text-uppercase white-text d-block text-center">обществознание</span></div>
-					<div class="col"><img src="img/english.jpg " alt="английский" class="img-responsive"><span class="text-uppercase white-text d-block text-center">английский
-							<br>язык</span></div>
-				</div>
-			</div>
-		</div> -->
+	
 		<section class="cards container-fluid">
 			<div class="row flex-nowrap slick">
 				<div class="columns">
@@ -324,12 +312,12 @@
 					<p>Обучение проходит в минигруппах до 6 человек в миниклассах с преподавателем в течение 2-х часов с одним
 						перерывом для 9 классов и в течении 2-х часов 15 минут для 11 классов . Во время перерыва дети могут попить чай с
 						печеньем, вафельками, пряниками, конфетами. После окончания урока, дается домашняя работа. Урок начинается с
-						проверки домашнего задания и мини теста по пройденому на прошлом уроке материалу.Далее работа над ошибками и
+						проверки домашнего задания и мини теста по пройденому на прошлом уроке материалу. Далее работа над ошибками и
 						новая тема.</p>
 				</div>
 				<div class="col-sm-5 col-12 text-sm-right">
 					<h3>Индивидуальные занятия</h3>
-					<p>Программа обучения составляется индивидуально.Обучение проходит вдвоем с преподавателем в течение 1, 1,5 либо
+					<p>Программа обучения составляется индивидуально. Обучение проходит вдвоем с преподавателем в течение 1, 1,5 либо
 						2-х часов с одним перерывом. Во время перерыва ученик может попить чай с печеньем, вафельками, пряниками,
 						конфетами. После окончания урока, дается домашняя работа. Урок начинается с проверки домашнего задания и мини
 						теста по пройденому на прошлом уроке материалу. Далее работа над ошибками и новая тема.</p>
@@ -639,7 +627,7 @@
 			Мы готовим к поступлению в лучшие вузы
 		</h2>
 		<div class="container">
-			<div class="row text-center">
+			<div class="row text-center ">
 				<div class="col-sm-3 col-6">
 					<img src="img/l1.png" alt="" class="img-responsive">
 					<p>Московский государственный университет имени М.В. Ломоносова</p>
